Alignment modifications and font updates with overall text size and spacing corrections

--- a/react-portfolio/src/App.module.css
+++ b/react-portfolio/src/App.module.css
@@ -1,7 +1,8 @@
 @import './vars.css';
 
 .App{
-    background-color: var(--color-bg);
+    background-image: linear-gradient( 109.6deg,  rgba(0,0,0,1) 11.2%, rgba(11,132,145,1) 91.1% );
+    /* background-color: var(--color-bg); */
     width: 100%;
     height: 100%;
     overflow: hidden;
