--- a/react-portfolio/src/components/About/About.module.css
+++ b/react-portfolio/src/components/About/About.module.css
@@ -8,12 +8,12 @@
     margin-top: 129px;
     z-index: 1;
     margin-left: 10%;
-    margin-right: 10%;
+    margin-right: 5%;
 }
 
 .title{
     color: var(--color-text);
-    font-size: 35px;
+    font-size: 55px;
     font-weight: 700;
     letter-spacing: 1.75px;
     text-transform: uppercase;
@@ -43,7 +43,7 @@
     align-items: center;
     border-radius: 20px;
     list-style: none;
-    padding: 25px;
+    padding: 5px;
     background-image: 
     linear-gradient(90deg, 
     rgba(165,215,232,0.42)0%, 
@@ -60,6 +60,7 @@
 .aboutItem h3{
     font-size: 25px;
     font-weight: 600;
+    margin-right: 15px;
 }
 
 .aboutItem p{
