--- a/react-portfolio/src/components/Contact/Contact.module.css
+++ b/react-portfolio/src/components/Contact/Contact.module.css
@@ -13,13 +13,13 @@
 }
 
 .text h2{
-    font-size: 80px;
+    font-size: 70px;
     font-weight: 700;
     letter-spacing: 4px;
 }
 
 .text p {
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 400;
     letter-spacing: 2px;
 }
@@ -58,7 +58,24 @@
         align-items: center;
     }
 
+    .text h2{
+        font-size: 60px;
+        font-weight: 600;
+        letter-spacing: 4px;
+    }
+
+    .text p{
+        font-size: 20px;
+        font-weight: 400;
+        letter-spacing: 2px;
+    }
+
     .links{
         align-items: center;
+    }
+
+    .link a{
+        font-size: 20px;
+        letter-spacing: 1.5px;
     }
 }
