--- a/react-portfolio/src/components/Experience/Experience.module.css
+++ b/react-portfolio/src/components/Experience/Experience.module.css
@@ -85,11 +85,13 @@
   .historyItemDetails h3 {
     font-size: 30px;
     font-weight: 500;
+    padding-bottom: 5px;
   }
   
   .historyItemDetails p {
     font-size: 20px;
     font-weight: 300;
+    padding-bottom: 5px;
   }
   
   .historyItemDetails ul {
