--- a/react-portfolio/src/vars.css
+++ b/react-portfolio/src/vars.css
@@ -1,8 +1,8 @@
 :root{
     /* colors */
     --color-text: #fff;
-    --color-primary: #576cbc;
-    --color-secondary: #19376d;
+    --color-primary: #1d5391;
+    --color-secondary: #091e43;
     --color-dark: #0b2447;
     --color-bg: #041e2d;
 
